--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -75,8 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 Things We've Learned From NASA's Mars InSight \n",
-      "Scientists are finding new mysteries since the geophysics mission landed two years ago.\n"
+      "The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover\n",
+      "Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.\n"
      ]
     }
    ],
@@ -136,10 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "1f67d39b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "#Visit the astrogeology site to obtain high resolution images for each of Mar's hemispheres. (https://marshemispheres.com/)\n",
     "url_hemImages = \"https://marshemispheres.com/\"\n",
@@ -155,26 +171,42 @@
     "image_url_list = []\n",
     "for image in hemImage_sources:\n",
     "    if (url_hemImages + image['href']) not in image_url_list:\n",
-    "        image_url_list.append(url_hemImages + image['href'])"
+    "        image_string = image['href']\n",
+    "        print(type(image_string))\n",
+    "        image_dict = {\"title\": f'{image_string[:-5]} Hemisphere',\n",
+    "                     \"img_url\": url_hemImages + image['href']}\n",
+    "        image_url_list.append(image_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "27d03f0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://marshemispheres.com/cerberus.html',\n",
-       " 'https://marshemispheres.com/schiaparelli.html',\n",
-       " 'https://marshemispheres.com/syrtis.html',\n",
-       " 'https://marshemispheres.com/valles.html',\n",
-       " 'https://marshemispheres.com/#']"
+       "[{'title': 'cerberus Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/cerberus.html'},\n",
+       " {'title': 'cerberus Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/cerberus.html'},\n",
+       " {'title': 'schiaparelli Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
+       " {'title': 'schiaparelli Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
+       " {'title': 'syrtis Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/syrtis.html'},\n",
+       " {'title': 'syrtis Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/syrtis.html'},\n",
+       " {'title': 'valles Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/valles.html'},\n",
+       " {'title': 'valles Hemisphere',\n",
+       "  'img_url': 'https://marshemispheres.com/valles.html'},\n",
+       " {'title': ' Hemisphere', 'img_url': 'https://marshemispheres.com/#'}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
