--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -136,26 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "1f67d39b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Visit the astrogeology site to obtain high resolution images for each of Mar's hemispheres. (https://marshemispheres.com/)\n",
     "url_hemImages = \"https://marshemispheres.com/\"\n",
@@ -170,17 +154,16 @@
     "\n",
     "image_url_list = []\n",
     "for image in hemImage_sources:\n",
-    "    if (url_hemImages + image['href']) not in image_url_list:\n",
-    "        image_string = image['href']\n",
-    "        print(type(image_string))\n",
-    "        image_dict = {\"title\": f'{image_string[:-5]} Hemisphere',\n",
-    "                     \"img_url\": url_hemImages + image['href']}\n",
+    "    image_string = image['href']\n",
+    "    image_dict = {\"title\": f'{image_string[:-5]} Hemisphere',\n",
+    "                 \"img_url\": url_hemImages + image['href']}\n",
+    "    if image_dict not in image_url_list:\n",
     "        image_url_list.append(image_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "27d03f0e",
    "metadata": {},
    "outputs": [
@@ -189,24 +172,16 @@
       "text/plain": [
        "[{'title': 'cerberus Hemisphere',\n",
        "  'img_url': 'https://marshemispheres.com/cerberus.html'},\n",
-       " {'title': 'cerberus Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/cerberus.html'},\n",
-       " {'title': 'schiaparelli Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
        " {'title': 'schiaparelli Hemisphere',\n",
        "  'img_url': 'https://marshemispheres.com/schiaparelli.html'},\n",
        " {'title': 'syrtis Hemisphere',\n",
        "  'img_url': 'https://marshemispheres.com/syrtis.html'},\n",
-       " {'title': 'syrtis Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/syrtis.html'},\n",
-       " {'title': 'valles Hemisphere',\n",
-       "  'img_url': 'https://marshemispheres.com/valles.html'},\n",
        " {'title': 'valles Hemisphere',\n",
        "  'img_url': 'https://marshemispheres.com/valles.html'},\n",
        " {'title': ' Hemisphere', 'img_url': 'https://marshemispheres.com/#'}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "4509952e",
    "metadata": {},
    "outputs": [],
